<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="bill_amount">0.00</string>
    <string name="percent_value">15%</string>
    <string name="tip_value">$0.00</string>
    <string name="total_value">$0.00</string>
    <string name="bill_amount_label">Bill Amount</string>
    <string name="percent_label">Percent</string>
    <string name="tip_label">Tip</string>
    <string name="total_label">Total</string>
</resources>